--- a/addons/hulu_like/template/web/page/active_list.html
+++ b/addons/hulu_like/template/web/page/active_list.html
@@ -1,53 +1,50 @@
 <tr>
+    <td>{$active['active_id']}</td>
+    <td>{php echo getactivepid($active['active_pid']);}</td>
 
-<td>{$active['active_id']}</td>
+    <td>{php echo getnickname($_W['uniacid'],$active['openid']);}</td>
 
-<td>{php echo getactivepid($active['active_pid']);}</td>
+    <td><img style="width:60px;height:60px;border-radius:50%;"
+             src="{php echo getavatar($_W['uniacid'],$active['openid']);}"/></td>
 
+    <td>
+        {php echo getactivetype($active['active_type']);}<br/>
+        {$active['active_title']}<br/>
+        {$active['active_address']}
+    </td>
 
-<td>{php echo getnickname($_W['uniacid'],$active['openid']);}</td>
+    <td>
+        {php echo getactivejoin($_W['uniacid'],$active['active_id']);}
+    </td>
 
-<td><img style="width:60px;height:60px;border-radius:50%;" src="{php echo getavatar($_W['uniacid'],$active['openid']);}"/></td>
+    <td><span class='label label-success'>{php echo round($active['active_money'],2);}</span><br/>{$active['active_content']}
+    </td>
 
+    <td>{$active['active_wechat']}<br/>{$active['active_tel']}</td>
 
-<td>
-{php echo getactivetype($active['active_type']);}<br/>
-{$active['active_title']}<br/>
-{$active['active_address']}</td>
+    <td>
+        {php echo date('Y-m-d H:i:s',$active['active_starttime']);}<br/>
+        {php echo date('Y-m-d H:i:s',$active['active_endtime']);}
+    </td>
 
-<td>
-{php echo getactivejoin($_W['uniacid'],$active['active_id']);}
-</td>
+    <td>
+        {php echo date('Y-m-d H:i:s',$active['active_time']);}<br/>
+        {$active['active_ip']}<br/>
+        {$active['active_container']}<br/>
+        {$active['active_os']}
+    </td>
 
-<td><span class='label label-success'>{php echo round($active['active_money'],2);}</span><br/>{$active['active_content']}</td>
+    <td>
+        <a class="btn btn-default"
+           href="{php echo $this->createWebUrl('active_update',array('active_id'=>$active['active_id'],'active_pid'=>'3'));}"
+           role="button">
+            <i class="fa fa-check fa-fw"></i>
+        </a>
 
-
-<td>{$active['active_wechat']}<br/>{$active['active_tel']}</td>
-
-
-
-<td>
-{php echo date('Y-m-d H:i:s',$active['active_starttime']);}<br/>
-{php echo date('Y-m-d H:i:s',$active['active_endtime']);}
-</td>
-
-<td>
-{php echo date('Y-m-d H:i:s',$active['active_time']);}<br/>
-{$active['active_ip']}<br/>
-{$active['active_container']}<br/>
-{$active['active_os']}
-</td>
-
-<td>
-
-<a class="btn btn-default" href="{php echo $this->createWebUrl('active_update',array('active_id'=>$active['active_id'],'active_pid'=>'3'));}" role="button">
-<i class="fa fa-check fa-fw"></i>
-</a>
-
-<a class="btn btn-default" href="{php echo $this->createWebUrl('active_update',array('active_id'=>$active['active_id'],'active_pid'=>'1'));}" role="button">
-<i class="fa fa-times fa-fw"></i>
-</a>
-
-</td>
-
+        <a class="btn btn-default"
+           href="{php echo $this->createWebUrl('active_update',array('active_id'=>$active['active_id'],'active_pid'=>'1'));}"
+           role="button">
+            <i class="fa fa-times fa-fw"></i>
+        </a>
+    </td>
 </tr>
