--- a/addons/hulu_like/template/web/chat.html
+++ b/addons/hulu_like/template/web/chat.html
@@ -3,7 +3,8 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">管理消息</a></li>
+        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab"
+                                                  data-toggle="tab">管理消息</a></li>
         <!--
     <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
     <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
@@ -13,18 +14,19 @@
     <!-- Tab panes -->
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="home">
-            <!--列表循环开始-->	
+            <!--列表循环开始-->
             <div class="panel panel-default">
                 <div class="panel-heading">管理消息</div>
                 <div class="panel-body">
                     <table class="table table-hover">
                         {template 'web/banner/chat'}
                         <tbody>
-                            {loop $chat $key $chat}
-                            {template 'web/page/chat_list'}
-                            {/loop}
+                        {loop $chat $key $chat}
+                        {template 'web/page/chat_list'}
+                        {/loop}
                         </tbody>
-                    </table>{$pagination}
+                    </table>
+                    {$pagination}
                 </div>
             </div>
             <!--列表循环结束-->
