--- a/addons/hulu_like/template/web/liaodou.html
+++ b/addons/hulu_like/template/web/liaodou.html
@@ -3,46 +3,48 @@
 
 <div>
 
-  <!-- Nav tabs -->
-  <ul class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">聊天权限</a></li>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab"
+                                                  data-toggle="tab">聊天权限</a></li>
 
-	<!--
-    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
-    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
-	-->
-  </ul>
+        <!--
+        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+        <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+        <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+        -->
+    </ul>
 
-  <!-- Tab panes -->
-  <div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="home">
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="home">
 
-	  <!--列表循环开始-->
-	<div class="panel panel-default">
-  <div class="panel-heading">聊天权限</div>
-  <div class="panel-body">
-<table class="table table-hover">
-{template 'web/banner/liaodou'}
-<tbody>
-{loop $liaodou $key $liaodou}
-{template 'web/page/liaodou_list'}
-{/loop}
-</tbody>
-</table>{$pagination}
-</div>
-</div>
-  <!--列表循环结束-->
+            <!--列表循环开始-->
+            <div class="panel panel-default">
+                <div class="panel-heading">聊天权限</div>
+                <div class="panel-body">
+                    <table class="table table-hover">
+                        {template 'web/banner/liaodou'}
+                        <tbody>
+                        {loop $liaodou $key $liaodou}
+                        {template 'web/page/liaodou_list'}
+                        {/loop}
+                        </tbody>
+                    </table>
+                    {$pagination}
+                </div>
+            </div>
+            <!--列表循环结束-->
 
-	</div>
+        </div>
 
-	<!--
-    <div role="tabpanel" class="tab-pane" id="profile">...</div>
-    <div role="tabpanel" class="tab-pane" id="messages">...</div>
-    <div role="tabpanel" class="tab-pane" id="settings">...</div>
+        <!--
+        <div role="tabpanel" class="tab-pane" id="profile">...</div>
+        <div role="tabpanel" class="tab-pane" id="messages">...</div>
+        <div role="tabpanel" class="tab-pane" id="settings">...</div>
 
-	-->
-  </div>
+        -->
+    </div>
 
 </div>
 
