--- a/addons/hulu_like/template/web/chongzhi.html
+++ b/addons/hulu_like/template/web/chongzhi.html
@@ -4,10 +4,12 @@
 
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a class="tablink" data-itemv="0" href="#home" aria-controls="home"
-                                                  role="tab" data-toggle="tab">充值记录</a></li>
-        <li role="presentation"><a class="tablink" data-itemv="1" href="#profile" aria-controls="profile" role="tab"
-                                   data-toggle="tab">消费记录</a></li>
+        <li role="presentation" class="active">
+            <a class="tablink" data-itemv="0" href="#home" aria-controls="home"
+               role="tab" data-toggle="tab">充值记录</a></li>
+        <li role="presentation">
+            <a class="tablink" data-itemv="1" href="#profile" aria-controls="profile" role="tab"
+               data-toggle="tab">消费记录</a></li>
 
         <!--
     <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
