--- a/addons/hulu_like/template/mobile/fengmian.html
+++ b/addons/hulu_like/template/mobile/fengmian.html
@@ -11,8 +11,8 @@
     <a href="{$fengmian_menu['link']}">
         <div id="fengmian_menu_style">
             <div class="fengmian_menu_pic">
-                     <img src="{MODULE_URL}public/menu/{$fengmian_menu['pic']}"/>
-			</div>
+                <img src="{MODULE_URL}public/menu/{$fengmian_menu['pic']}"/>
+            </div>
             <div class="fengmian_menu_p">{$fengmian_menu['name']}</div>
         </div>
     </a>
@@ -21,40 +21,42 @@
 
 
 <script>
-//$(document).ready(function(){
-var page = 2;
-function getmore(usertype) {
-    var lock = false;    
-    if(lock) return;
-    lock = true;
-    $.post("{php echo $this->createMobileUrl('getmore');}",
-        {
-            type: usertype,page:page
-        },
-        function (data) {
-            if (data != '') {
-                page++;
-                lock = false;                    
-                $("#fengmian_loading").show();
-                $("#user_list").append(data);
-                setTimeout("$('#fengmian_loading').hide()", 2000);
-            } else {
-                $(".more_list").hide();
-                lock = true;
-            }                
-    });
-}
-//});
+    //$(document).ready(function(){
+    var page = 2;
+
+    function getmore(usertype) {
+        var lock = false;
+        if (lock) return;
+        lock = true;
+        $.post("{php echo $this->createMobileUrl('getmore');}", {
+                type: usertype,
+                page: page
+            },
+            function (data) {
+                if (data != '') {
+                    page++;
+                    lock = false;
+                    $("#fengmian_loading").show();
+                    $("#user_list").append(data);
+                    setTimeout("$('#fengmian_loading').hide()", 2000);
+                } else {
+                    $(".more_list").hide();
+                    lock = true;
+                }
+            });
+    }
+
+    //});
 </script>
 
 {if empty($user)}{template 'emptydata'}{/if}
 
-<div id="user_list">
-    {template 'user'}
-</div>
+<div id="user_list">{template 'user'}</div>
 
 <div id="user_list_style" class="more_list" style="text-align:center;margin-top: -100px;margin-bottom: 20px;">
-  <div style="text-align:center" class=""><a href="javascript:" onclick="getmore('{$type}')" style="text-align:center;margin-top: -2000px;font-size: 12px;color: #999;">加载更多<br></a> </div>
+    <div style="text-align:center" class="">
+        <a href="javascript:" onclick="getmore('{$type}')" style="text-align:center;margin-top: -2000px;font-size: 12px;color: #999;">加载更多<br></a>
+    </div>
 </div>
 
 {template 'distance'}
@@ -62,5 +64,7 @@ function getmore(usertype) {
 {template 'footer'}
 
 <div id="fengmian_loading">
-    <div class="fengmian_loading_body"><div class="fengmian_loading_pic">拼命加载中...</div></div>
+    <div class="fengmian_loading_body">
+        <div class="fengmian_loading_pic">拼命加载中...</div>
+    </div>
 </div>
