--- a/addons/hulu_like/template/web/join.html
+++ b/addons/hulu_like/template/web/join.html
@@ -5,10 +5,14 @@
 
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a class="tablink" data-itemv="0" href="#home" aria-controls="home" role="tab" data-toggle="tab">所有报名</a></li>
-        <li role="presentation"><a class="tablink" data-itemv="3" href="#profile" aria-controls="profile" role="tab" data-toggle="tab">已成功</a></li>
-        <li role="presentation"><a class="tablink" data-itemv="2" href="#messages" aria-controls="messages" role="tab" data-toggle="tab">未支付</a></li>
-        <li role="presentation"><a class="tablink" data-itemv="1" href="#settings" aria-controls="settings" role="tab" data-toggle="tab">已失败</a></li>
+        <li role="presentation" class="active"><a class="tablink" data-itemv="0" href="#home" aria-controls="home"
+                                                  role="tab" data-toggle="tab">所有报名</a></li>
+        <li role="presentation"><a class="tablink" data-itemv="3" href="#profile" aria-controls="profile" role="tab"
+                                   data-toggle="tab">已成功</a></li>
+        <li role="presentation"><a class="tablink" data-itemv="2" href="#messages" aria-controls="messages" role="tab"
+                                   data-toggle="tab">未支付</a></li>
+        <li role="presentation"><a class="tablink" data-itemv="1" href="#settings" aria-controls="settings" role="tab"
+                                   data-toggle="tab">已失败</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -22,11 +26,12 @@
                     <table class="table table-hover">
                         {template 'web/banner/join'}
                         <tbody>
-                            {loop $join $key $join}
-                            {template 'web/page/join_list'}
-                            {/loop}
+                        {loop $join $key $join}
+                        {template 'web/page/join_list'}
+                        {/loop}
                         </tbody>
-                    </table>{$pagination_0}
+                    </table>
+                    {$pagination_0}
                 </div>
             </div>
             <!--列表循环结束-->
@@ -41,11 +46,12 @@
                     <table class="table table-hover">
                         {template 'web/banner/join'}
                         <tbody>
-                            {loop $join3 $key $join}
-                            {template 'web/page/join_list'}
-                            {/loop}
+                        {loop $join3 $key $join}
+                        {template 'web/page/join_list'}
+                        {/loop}
                         </tbody>
-                    </table>{$pagination_3}
+                    </table>
+                    {$pagination_3}
                 </div>
             </div>
             <!--列表循环结束-->
@@ -60,11 +66,12 @@
                     <table class="table table-hover">
                         {template 'web/banner/join'}
                         <tbody>
-                            {loop $join2 $key $join}
-                            {template 'web/page/join_list'}
-                            {/loop}
+                        {loop $join2 $key $join}
+                        {template 'web/page/join_list'}
+                        {/loop}
                         </tbody>
-                    </table>{$pagination_2}
+                    </table>
+                    {$pagination_2}
                 </div>
             </div>
             <!--列表循环结束-->
@@ -79,11 +86,12 @@
                     <table class="table table-hover">
                         {template 'web/banner/join'}
                         <tbody>
-                            {loop $join1 $key $join}
-                            {template 'web/page/join_list'}
-                            {/loop}
+                        {loop $join1 $key $join}
+                        {template 'web/page/join_list'}
+                        {/loop}
                         </tbody>
-                    </table>{$pagination_1}
+                    </table>
+                    {$pagination_1}
                 </div>
             </div>
             <!--列表循环结束-->
@@ -94,7 +102,7 @@
 </div>
 <script type="text/javascript">
     var flag = 0;
-    $('.tablink').click(function() {
+    $('.tablink').click(function () {
         if (flag == 1) {
             return;
         }
@@ -105,11 +113,11 @@
                 url: '{php echo $this->createWebUrl('setpageparam');}',
                 type: 'post',
                 dataType: 'text',
-                data: {set_page_param:post_v},
-                success:function(data){
+                data: {set_page_param: post_v},
+                success: function (data) {
                     flag = 0;
-                }                
-            });            
+                }
+            });
         }
     });
     $("a[data-itemv$='{$hit_tab}']").click();
