--- a/addons/hulu_like/template/web/finance.html
+++ b/addons/hulu_like/template/web/finance.html
@@ -6,7 +6,7 @@
 <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#count" role="tab" data-toggle="tab">财务统计</a></li>
     <li role="presentation"><a href="#home" role="tab" data-toggle="tab">财务管理</a></li>
-    <li role="presentation"><a href="#profile" role="tab" data-toggle="tab">添加</a></li>
+    <li role="presentation"><a href="#profile" role="tab" data-toggle="tab">查询</a></li>
     <!--
     <li role="presentation"><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
     <li role="presentation"><a href="#settings" role="tab" data-toggle="tab">Settings</a></li>
