--- a/addons/hulu_like/template/web/page/finance_count.html
+++ b/addons/hulu_like/template/web/page/finance_count.html
@@ -8,25 +8,25 @@
                 <div class="col-sm-3 text-center">
                     <div class="title">今天订单总额</div>
                     <div>
-                        <span class="yesterday" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $today_total['money'] > 0 ? $today_total['money'] : 0 ?></span>
+                        <span class="yesterday" style="color: red" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $countInfo['money'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">成功金额</div>
                     <div>
-                        <span class="today" ng-init="0" ng-bind="fans_kpi.today.new"><?= $today_success['money'] > 0 ? $today_success['money'] : 0 ?></span>
+                        <span class="today" style="color: red" ng-init="0" ng-bind="fans_kpi.today.new"><?= $countInfo['success_money'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">订单总数</div>
                     <div>
-                        <span class="yesterday" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $today_total['num'] > 0 ? $today_total['num'] : 0 ?></span>
+                        <span class="yesterday" style="color: red" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $countInfo['num'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">成功总数</div>
                     <div>
-                        <span class="today" ng-init="0" ng-bind="fans_kpi.today.jing_num"><?= $today_success['num'] > 0 ? $today_success['num'] : 0 ?></span>
+                        <span class="today" style="color: red" ng-init="0" ng-bind="fans_kpi.today.jing_num"><?= $countInfo['success_num'] ?></span>
                     </div>
                 </div>
             </div>
@@ -44,25 +44,25 @@
                 <div class="col-sm-3 text-center">
                     <div class="title">昨日订单总额</div>
                     <div>
-                        <span class="yesterday" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $yd_total['money'] > 0 ? $yd_total['money'] : 0 ?></span>
+                        <span class="yesterday" style="color: red" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $countInfo['day1_money'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">成功金额</div>
                     <div>
-                        <span class="today" ng-init="0" ng-bind="fans_kpi.today.new"><?= $yd_success['money'] > 0 ? $yd_success['money'] : 0 ?></span>
+                        <span class="today" style="color: red" ng-init="0" ng-bind="fans_kpi.today.new"><?= $countInfo['day1_success_money'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">订单总数</div>
                     <div>
-                        <span class="yesterday" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $yd_total['num'] > 0 ? $yd_total['num'] : 0 ?></span>
+                        <span class="yesterday" style="color: red" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $countInfo['day1_num'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">成功总数</div>
                     <div>
-                        <span class="today" ng-init="0" ng-bind="fans_kpi.today.jing_num"><?= $yd_success['num'] > 0 ? $yd_success['num'] : 0 ?></span>
+                        <span class="today" style="color: red" ng-init="0" ng-bind="fans_kpi.today.jing_num"><?= $countInfo['day1_success_num'] ?></span>
                     </div>
                 </div>
             </div>
@@ -80,25 +80,25 @@
                 <div class="col-sm-3 text-center">
                     <div class="title">订单总额</div>
                     <div>
-                        <span class="yesterday" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $seven_total['money'] > 0 ? $seven_total['money'] : 0 ?></span>
+                        <span class="yesterday" style="color: red" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $countInfo['day7_money'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">成功金额</div>
                     <div>
-                        <span class="today" ng-init="0" ng-bind="fans_kpi.today.new"><?= $seven_success['money'] > 0 ? $seven_success['money'] : 0 ?></span>
+                        <span class="today" style="color: red" ng-init="0" ng-bind="fans_kpi.today.new"><?= $countInfo['day7_success_money'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">订单总数</div>
                     <div>
-                        <span class="yesterday" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $seven_total['num'] > 0 ? $seven_total['num'] : 0 ?></span>
+                        <span class="yesterday" style="color: red" ng-init="0" ng-bind="fans_kpi.yesterday.cancel"><?= $countInfo['day7_num'] ?></span>
                     </div>
                 </div>
                 <div class="col-sm-3 text-center">
                     <div class="title">成功总数</div>
                     <div>
-                        <span class="today" ng-init="0" ng-bind="fans_kpi.today.jing_num"><?= $seven_success['num'] > 0 ? $seven_success['num'] : 0 ?></span>
+                        <span class="today" style="color: red" ng-init="0" ng-bind="fans_kpi.today.jing_num"><?= $countInfo['day7_success_num'] ?></span>
                     </div>
                 </div>
             </div>
