--- a/addons/hulu_like/template/web/page/finance_add.html
+++ b/addons/hulu_like/template/web/page/finance_add.html
@@ -27,6 +27,12 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-sm-2 control-label">下单时间</label>
+                <div class="col-sm-8">
+                    <input type="text" name="created_at" value="" class="form-control form-control-static" placeholder="格式: 2019-07-01 09:00:00">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-sm-2 control-label">用户图片</label>
                 <div class="col-sm-8">
                     {php echo tpl_form_field_image('avatar');}
